fix: make ol work after ol in ul fix: integrate other suggestions and improve code readability

--- a/packages/styles/src/modules/list.css
+++ b/packages/styles/src/modules/list.css
@@ -12,11 +12,6 @@
   list-style-type: revert;
   padding: revert;
 
-  ul,
-  ol {
-    all: revert;
-  }
-
   @apply text-left py-4 pl-4;
 
   li:not(:first-child) {
@@ -25,70 +20,81 @@
 
   ul,
   ol {
-    @apply pt-[0.75em];
+    @apply pl-[1.4em] pt-[0.75em];
+    all: revert;
   }
 
-  ol,
-  ul {
-    @apply pl-[1.4em];
-  }
-
-  /* 
-   * Safari currently only partially supports the ::marker pseudo class.
-   * Support is limited to color and font-size. Therefore we optimize the numbering only for non-Safari browsers.
-   * https://developer.mozilla.org/en-US/docs/Web/CSS/::marker#browser_compatibility
-   */
   @supports not (-webkit-hyphens: none) {
+    /* Safari automatically adds some spacing. This adds it for other browsers. */
     li {
       @apply pl-[0.3em];
     }
 
-    &:is(ol):not(.sd-list--icon),
-    ol {
-      > li > ol {
-        @apply pl-[1.9em];
-        > li {
-          > ol {
-            @apply pl-[2.7em];
-          }
-        }
-      }
-      & > li {
+    /*
+     * Ordered lists
+     */
+
+    /* 
+   * Safari currently only partially supports the ::marker pseudo class.
+   * Support is limited to color and font-size. Therefore we optimize the numbering only for non-Safari browsers.
+   * https://developer.mozilla.org/en-US/docs/Web/CSS/::marker#browser_compatibility
+   */
+    /* Level 1 */
+    &:is(ol):not(.sd-list--icon) {
+      counter-reset: item;
+      > li {
         counter-increment: item;
         &::marker {
-          content: counters(item, '.') '. ';
+          content: counters(item, '.', decimal) '. ';
+        }
+        /* Level 2 */
+        > ol {
+          @apply pl-[1.9em];
+          counter-reset: subitem;
+          > li {
+            counter-increment: subitem;
+            &::marker {
+              content: counters(item, '.', decimal) '.' counters(subitem, '.', decimal) '. ';
+            }
+            /* Level 3 */
+            > ol {
+              @apply pl-[2.7em];
+              counter-reset: subsubitem;
+              > li {
+                counter-increment: subsubitem;
+                &::marker {
+                  content: counters(item, '.', decimal) '.' counters(subitem, '.', decimal) '.'
+                    counters(subsubitem, '.', decimal) '. ';
+                }
+              }
+            }
+          }
         }
       }
     }
   }
 
-  /* Add second level */
-  &:is(ol),
-  &:is(ol) > li > ol,
-  ol > li > ol {
-    counter-reset: item;
-  }
+  /*
+   * Unordered lists
+   */
 
-  /* Ordered lists inside unordered lists. */
-  &:is(ul) > li > ol,
-  ul > li > ol {
-    counter-set: item 0;
-  }
-
+  /* Level 1 */
   &:is(ul):not(.sd-list--icon),
   ul {
     @apply pl-[0.5em];
     > li {
       @apply pl-[0.75em];
-      list-style-type: '\2022';
+      list-style-type: '\2022'; /* • */
+      /* Level 2 */
       > ul {
         @apply pl-[0.3em];
         > li {
-          list-style-type: '\002B1D';
+          list-style-type: '\002B1D'; /* · */
+          /* Level 3 */
           > ul {
             @apply pl-[0.4em];
             > li {
-              list-style-type: '\2010';
+              list-style-type: '\2010'; /* - */
             }
           }
         }
@@ -96,6 +102,10 @@
     }
   }
 }
+
+/*
+  * Icon lists
+  */
 
 .sd-list--icon {
   @apply text-left py-4;
@@ -133,6 +143,10 @@
     }
   }
 }
+
+/*
+ * Inverted
+ */
 
 .sd-list--inverted,
 .sd-prose--inverted > :is(ol, ul) {
